[package]
edition = "2021"
name = "bevy-playground"
version = "0.1.0"

# Settings for fast compile in dev
[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy_flycam = "*"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }


