[package]
edition = "2021"
name = "bevy-playground"
version = "0.1.0"

# Settings for fast compile in dev
[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_rapier3d = "0.21.0"
bevy = { version = "0.10.0", default-features = false, features = ["bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_pbr", "x11"] }
bevy_renet = {version = "0.0.8"}
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3.1"
bevy_egui = "0.20.0"
renet_visualizer = {version = "*", features = ["bevy"]}
smooth-bevy-cameras = "0.8.0"
fastrand = "1.9.0"
solana-client = "1.7.17"
bevy_flycam = "0.10.1"